--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -7,3 +7,8 @@ PyQt5>=5.15.4
 py7zr>=0.22.0
 rarfile>=4.2
 opencv-python>=4.6.0
+requests>=2.31.0
+urllib3>=2.0.7
+chardet>=5.2.0
+charset-normalizer>=3.3.2
+cryptography>=41.0.7
